--- a/.github/workflows/custom.yml
+++ b/.github/workflows/custom.yml
@@ -97,7 +97,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Run tests
         run: npm test
@@ -139,7 +139,7 @@ jobs:
           cache: 'npm'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Build for analysis
         run: npm run build
